Aviary.pl bug 4990 - Literówka w pliku accounts.properties

--- a/pl/browser/chrome/browser/accounts.properties
+++ b/pl/browser/chrome/browser/accounts.properties
@@ -7,7 +7,7 @@ needUserLong=Przebudowaliśmy synchronizację, by była łatwiejsza - uaktualnij
 upgradeToFxA.label=Uaktualnij
 upgradeToFxA.accessKey=U
 
-signInAfterUpgradeOnOtherDevice.description=Synchronizacja została uaktualniona na innym urządzeniu przez „%S”. Wznowić synchronizowację?
+signInAfterUpgradeOnOtherDevice.description=Synchronizacja została uaktualniona na innym urządzeniu przez „%S”. Wznowić synchronizowanie?
 signInAfterUpgradeOnOtherDevice.label=Zaloguj się
 signInAfterUpgradeOnOtherDevice.accessKey=Z
 
@@ -22,7 +22,7 @@ forgetMigration.accessKey=s
 unlinkMigration.label=Odłączyć od synchronizacji
 unlinkMigration.accessKey=O
 unlinkVerificationTitle=Odłączyć od starej wersji synchronizacji?
-unlinkVerificationDescription=Aby uniknąć dalszych przypomnień o aktualiazacji synchronizacji, można odłączyć stare konto Sync, aby je usunąć.
+unlinkVerificationDescription=Aby uniknąć dalszych przypomnień o aktualizacji synchronizacji, można odłączyć stare konto Sync, aby je usunąć.
 unlinkVerificationConfirm=Odłącz
 
 verificationSentTitle=Wysłano wiadomość weryfikacyjną
