--- a/uk/dom/chrome/layout/css.properties
+++ b/uk/dom/chrome/layout/css.properties
@@ -149,23 +149,23 @@ PESupportsConditionInParensEOF=')'
 PESupportsConditionNotEOF='not'
 PESupportsWhitespaceRequired=Очікувався пробіл після 'not', 'and', чи 'or'.
 PESupportsConditionExpectedOpenParenOrFunction=Очікувалась '(' чи функція при парсингу умови supports, але знайдено '%1$S'.
-PESupportsConditionExpectedCloseParen=Expected ')' while parsing supports condition but found '%1$S'.
-PESupportsConditionExpectedStart2=Expected 'not', '(', or function while parsing supports condition but found '%1$S'.
-PESupportsConditionExpectedNot=Expected 'not' while parsing supports condition but found '%1$S'.
-PESupportsGroupRuleStart=Expected '{' to begin @supports rule but found '%1$S'.
-PEFilterEOF=filter
-PEExpectedNoneOrURL=Expected 'none' or URL but found '%1$S'.
-PEExpectedNoneOrURLOrFilterFunction=Expected 'none', URL, or filter function but found '%1$S'.
-PEExpectedNonnegativeNP=Expected non-negative number or percentage.
-PEFilterFunctionArgumentsParsingError=Error in parsing arguments for filter function.
-PEVariableEOF=variable
-PEVariableEmpty=Expected variable value but found '%1$S'.
-PEValueWithVariablesParsingError=Error in parsing value for '%1$S' after substituting variables.
-PEValueWithVariablesFallbackInherit=Falling back to 'inherit'.
-PEValueWithVariablesFallbackInitial=Falling back to 'initial'.
-PEInvalidVariableReference=Property contained reference to invalid variable.
-PEInvalidVariableTokenFallback=Found invalid token '%1$S' at top level of variable reference fallback.
-PEExpectedVariableNameEOF=identifier for variable name
-PEExpectedVariableName=Expected identifier for variable name but found '%1$S'.
-PEExpectedVariableFallback=Expected variable reference fallback after ','.
-PEExpectedVariableCommaOrCloseParen=Expected ',' or ')' after variable name in variable reference but found '%1$S'.
+PESupportsConditionExpectedCloseParen=Очікувалась ')' при парсингу умови supports, але знайдено '%1$S'.
+PESupportsConditionExpectedStart2=Очікувалось 'not', '(', чи функція при парсингу умови supports, але знайдено '%1$S'.
+PESupportsConditionExpectedNot=Очікувалось 'not' при парсингу умови supports, але знайдено '%1$S'.
+PESupportsGroupRuleStart=Очікувалась '{' для початку правила @supports, але знайдено '%1$S'.
+PEFilterEOF=фільтр
+PEExpectedNoneOrURL=Очікувалось 'none' або URL, але знайдено '%1$S'.
+PEExpectedNoneOrURLOrFilterFunction=Очікувалось 'none', URL, чи функція фільтру, але знайдено '%1$S'.
+PEExpectedNonnegativeNP=Очікувалось додаткове число чи процент.
+PEFilterFunctionArgumentsParsingError=Помилка в парсингу аргументів для функції фільтра.
+PEVariableEOF=змінне
+PEVariableEmpty=Очікувалось змінне значення, але знайдено '%1$S'.
+PEValueWithVariablesParsingError=Помилка в парсингу значення для, '%1$S' після підстановки змінних.
+PEValueWithVariablesFallbackInherit=Повернення до 'inherit'.
+PEValueWithVariablesFallbackInitial=Повернення до 'initial'.
+PEInvalidVariableReference=Властивість містила посилання на некоректну змінну.
+PEInvalidVariableTokenFallback=Знайдео некоректний маркер '%1$S' на верхньому рівні variable reference fallback.
+PEExpectedVariableNameEOF=ідентифікатор для імені змінної
+PEExpectedVariableName=Очікувався ідентифікатор для імені змінної, але знайдено '%1$S'.
+PEExpectedVariableFallback=Очікувався variable reference fallback після ','.
+PEExpectedVariableCommaOrCloseParen=Очікувались ',' чи ')' після імені змінної в посиланні змінної, але знайдено '%1$S'.
