[qa] browser: cycle 37

--- a/sr/browser/chrome/browser/accounts.properties
+++ b/sr/browser/chrome/browser/accounts.properties
@@ -5,7 +5,7 @@
 # LOCALIZATION NOTE (needUserShort)
 # %S = Firefox Accounts brand name from syncBrand.dtd
 needUserShort = %S је потребан за синхронизацију
-needUserLong = Ми смо поново направили Sync да свима олакшамо коришћење. Молимо Вас да се надоградите на Firefox налог да бисте наставили са синхронизацијом.
+needUserLong = Ми смо поново направили Sync да бисмо свима олакшали његово коришћење. Молимо Вас да се надоградите на Firefox налог да бисте наставили са синхронизацијом.
 
 upgradeToFxA.label = Надогради
 upgradeToFxA.accessKey = Н
