Translation of new strings 3.10 (plugins.properties, csp.properties)

--- a/uk/dom/chrome/plugins.properties
+++ b/uk/dom/chrome/plugins.properties
@@ -20,5 +20,5 @@ mimetype_label=Тип MIME
 description_label=Опис
 suffixes_label=Суфікси
 
-openH264_name=OpenH264 Video Codec provided by Cisco Systems, Inc.
-openH264_description=Play back web video and use video chats.
+openH264_name=Відеокодек OpenH264 наданий Cisco Systems, Inc.
+openH264_description=Використовується для веб-відео та відео-чатів.
