--- a/uk/dom/chrome/security/csp.properties
+++ b/uk/dom/chrome/security/csp.properties
@@ -5,68 +5,68 @@
 # CSP Warnings:
 # LOCALIZATION NOTE (CSPViolation):
 # %1$S is the reason why the resource has not been loaded.
-CSPViolation = The page's settings blocked the loading of a resource: %1$S
+CSPViolation = Налаштування сторінки заблокували завантаження ресурсу: %1$S
 # LOCALIZATION NOTE (CSPViolationWithURI):
 # %1$S is the directive that has been violated.
 # %2$S is the URI of the resource which violated the directive.
-CSPViolationWithURI = The page's settings blocked the loading of a resource at %2$S ("%1$S").
+CSPViolationWithURI = Налаштування сторінки заблокували завантаження ресурсу в %2$S ("%1$S").
 # LOCALIZATION NOTE (CSPROViolation):
 # %1$S is the reason why the resource has not been loaded.
-CSPROViolation = A violation occurred for a report-only CSP policy ("%1$S"). The behavior was allowed, and a CSP report was sent.
+CSPROViolation = Для політики CSP report-only сталося порушення ("%1$S"). Поведінку було дозволено та надіслано звіт CSP.
 # LOCALIZATION NOTE (CSPROViolationWithURI):
 # %1$S is the directive that has been violated.
 # %2$S is the URI of the resource which violated the directive.
-CSPROViolationWithURI = The page's settings observed the loading of a resource at %2$S ("%1$S"). A CSP report is being sent.
+CSPROViolationWithURI = Налаштування сторінки зареєстрували завантаження ресурсу на %2$S ("%1$S"). Надіслано звіт CSP.
 # LOCALIZATION NOTE (triedToSendReport):
 # %1$S is the URI we attempted to send a report to.
-triedToSendReport = Tried to send report to invalid URI: "%1$S"
+triedToSendReport = Спроба відправлення звіту на некоректний URI: "%1$S"
 # LOCALIZATION NOTE (couldNotParseReportURI):
 # %1$S is the report URI that could not be parsed
-couldNotParseReportURI = couldn't parse report URI: %1$S
+couldNotParseReportURI = невдалий парсинг звіту URI: %1$S
 # LOCALIZATION NOTE (couldNotProcessUnknownDirective):
 # %1$S is the unknown directive
-couldNotProcessUnknownDirective = Couldn't process unknown directive '%1$S'
+couldNotProcessUnknownDirective = Не вдалося обробити невідому директиву '%1$S'
 # LOCALIZATION NOTE (ignoringUnknownOption):
 # %1$S is the option that could not be understood
-ignoringUnknownOption = Ignoring unknown option %1$S
+ignoringUnknownOption = Ігнорування невідомого параметра %1$S
 # LOCALIZATION NOTE (reportURInotHttpsOrHttp2):
 # %1$S is the ETLD of the report URI that is not HTTP or HTTPS
-reportURInotHttpsOrHttp2 = The report URI (%1$S) should be an HTTP or HTTPS URI.
+reportURInotHttpsOrHttp2 = URI звіту (%1$S) повинен бути HTTP чи HTTPS URI.
 # LOCALIZATION NOTE (reportURInotInReportOnlyHeader):
 # %1$S is the ETLD of the page with the policy
-reportURInotInReportOnlyHeader = This site (%1$S) has a Report-Only policy without a report URI. CSP will not block and cannot report violations of this policy.
+reportURInotInReportOnlyHeader = Цей сайт (%1$S) має політику Report-Only без URI звіту. CSP не буде блокувати та не може звітувати про порушення цієї політики.
 # LOCALIZATION NOTE (failedToParseUnrecognizedSource):
 # %1$S is the CSP Source that could not be parsed
-failedToParseUnrecognizedSource = Failed to parse unrecognized source %1$S
+failedToParseUnrecognizedSource = Невдалий парсинг невизначеного ресурсу %1$S
 # LOCALIZATION NOTE (inlineScriptBlocked):
 # inline script refers to JavaScript code that is embedded into the HTML document.
-inlineScriptBlocked = An attempt to execute inline scripts has been blocked
+inlineScriptBlocked = Спроба виконання вбудованих сценаріїв була заблокована
 # LOCALIZATION NOTE (inlineStyleBlocked):
 # inline style refers to CSS code that is embedded into the HTML document.
-inlineStyleBlocked = An attempt to apply inline style sheets has been blocked
+inlineStyleBlocked = Спроба застосування вбудованої таблиці стилів була заблокована
 # LOCALIZATION NOTE (scriptFromStringBlocked):
 # eval is a name and should not be localized.
-scriptFromStringBlocked = An attempt to call JavaScript from a string (by calling a function like eval) has been blocked
+scriptFromStringBlocked = Спроба виклику JavaScript з рядка (шляхом виклику функції типу eval) була заблокована
 # LOCALIZATION NOTE (hostNameMightBeKeyword):
 # %1$S is the hostname in question and %2$S is the keyword
-hostNameMightBeKeyword = Interpreting %1$S as a hostname, not a keyword. If you intended this to be a keyword, use '%2$S' (wrapped in single quotes).
+hostNameMightBeKeyword = Інтерпритація %1$S, як імені хоста, а не ключового слова. Якщо ви хочете, щоб це було ключовим словом, використайте '%2$S' (заключене в одинарні кавички).
 # LOCALIZATION NOTE (notSupportingDirective):
 # directive is not supported (e.g. 'reflected-xss')
-notSupportingDirective = Not supporting directive '%1$S'. Directive and values will be ignored.
+notSupportingDirective = Непідтримувана директива '%1$S'. Директиви та значення будуть проігноровані.
 
 # CSP Errors:
 # LOCALIZATION NOTE (couldntParseInvalidSource):
 # %1$S is the source that could not be parsed
-couldntParseInvalidSource = Couldn't parse invalid source %1$S
+couldntParseInvalidSource = Невдалий парсинг некоректного ресурсу %1$S
 # LOCALIZATION NOTE (couldntParseInvalidHost):
 # %1$S is the host that's invalid
-couldntParseInvalidHost = Couldn't parse invalid host %1$S
+couldntParseInvalidHost = Невдалий парсинг некоректного хосту %1$S
 # LOCALIZATION NOTE (couldntParseScheme):
 # %1$S is the string source
-couldntParseScheme = Couldn't parse scheme in %1$S
+couldntParseScheme = Невдалий парсинг схеми в %1$S
 # LOCALIZATION NOTE (couldntParsePort):
 # %1$S is the string source
-couldntParsePort = Couldn't parse port in %1$S
+couldntParsePort = Невдалий парсинг порту в %1$S
 # LOCALIZATION NOTE (duplicateDirective):
 # %1$S is the name of the duplicate directive
-duplicateDirective = Duplicate %1$S directives detected.  All but the first instance will be ignored.
+duplicateDirective = Виявлено дублікати директиви %1$S.  Всі випадки, окрім першого будуть проігноровані.
