[id] update from Pootle (firefox)

--- a/id/browser/chrome/browser/browser.properties
+++ b/id/browser/chrome/browser/browser.properties
@@ -275,6 +275,7 @@ identity.identified.verified_by_you=Anda telah membuat pengecualian keamanan unt
 identity.identified.state_and_country=%S, %S
 
 identity.encrypted2=Sambungan ke situs web ini bersifat aman.
+identity.broken_loaded=Sambungan ke situs web ini tidak sepenuhnya aman karena mengandung elemen yang tidak dienkripsi (misalnya gambar) atau enkripsinya tidak cukup kuat.
 identity.mixed_active_loaded2=Situs web ini mengandung konten interaktif yang tidak dienkripsi (misalnya skrip). Pihak lain dapat melihat informasi Anda atau memodifikasi perilaku situs web ini.
 identity.unencrypted=Sambungan ke situs web ini tidak dienkripsi.
 
