--- a/id/dom/chrome/dom/dom.properties
+++ b/id/dom/chrome/dom/dom.properties
@@ -160,4 +160,5 @@ Window_ControllersWarning=Penggunaan window.controllers tidak disarankan lagi. J
 ImportXULIntoContentWarning=Mengimpor simpul XUL ke dokumen konten tidak disarankan lagi. Fungsionalitas ini akan dihapus segera.
 XMLDocumentLoadPrincipalMismatch=Penggunaan document.load dilarang pada Document yang berasal dari Window lainnya. Hanya Window yang menjadi tempat dibuatnya Document yang diizinkan untuk memanggil .load pada Document tersebut. Disarankan untuk menggunakan XMLHttpRequest.
 # LOCALIZATION NOTE: Do not translate "IndexedDB".
+IndexedDBTransactionAbortNavigation=Sebuah transaksi IndexedDB yang belum selesai telah dibatalkan karena proses navigasi laman.
 # LOCALIZATION NOTE (WillChangeBudgetWarning): Do not translate Will-change, %1$S,%2$S,%3$S are numbers.
