--- a/id/dom/chrome/layout/css.properties
+++ b/id/dom/chrome/layout/css.properties
@@ -106,6 +106,9 @@ PEColorSaturationEOF=kecerahan
 PEColorLightnessEOF=kecerahan
 PEColorOpacityEOF=opacity pada nilai warna
 PEExpectedNumber=Diharapkan sebuah angka tetapi ditemukan '%1$S'.
+PEPositionEOF=<posisi>
+PEExpectedPosition=Diharapkan <posisi> tetapi ditemukan '%1$S'.
+PEExpectedRadius=Diharapkan jari-jari tetapi ditemukan '%1$S'.
 PEExpectedCloseParen=Diharapkan ')' tetapi ditemukan '%1$S'.
 PEDeclEndEOF=':' atau '}' pada akhir deklarasi
 PEParseDeclarationNoColon=Diharapkan ':' tetapi ditemukan '%1$S'.
