--- a/id/security/manager/chrome/pipnss/nsserrors.properties
+++ b/id/security/manager/chrome/pipnss/nsserrors.properties
@@ -314,3 +314,4 @@ SEC_ERROR_CERT_SIGNATURE_ALGORITHM_DISABLED=Sertifikat ditandatangani dengan alg
 MOZILLA_PKIX_ERROR_KEY_PINNING_FAILURE=Server menggunakan key pinning (HPKP) tetapi tidak ada rantai sertifikat dipercaya yang dapat dibangun yang sesuai dengan pinset. Pelanggaran key pinning tidak dapat ditimpa.
 MOZILLA_PKIX_ERROR_CA_CERT_USED_AS_END_ENTITY=Server menggunakan sertifikat dengan ekstensi kendala dasar yang mengidentifikasi sebagai otoritas sertifikat. Hal ini salah untuk sertifikat yang diterbitkan dengan benar.
 MOZILLA_PKIX_ERROR_INADEQUATE_KEY_SIZE=Server menggunakan sertifikat dengan ukuran kunci yang terlalu kecil untuk membuat sambungan aman.
+MOZILLA_PKIX_ERROR_V1_CERT_USED_AS_CA=Sebuah sertifikat X.509 versi 1 yang bukan merupakan jangkar kepercayaan telah digunakan untuk menerbitkan sertifikat server. Sertifikat X.509 versi 1 sudah usang dan seharusnya tidak digunakan untuk menandatangani sertifikat lainnya.
