--- a/id/toolkit/chrome/global/aboutSupport.properties
+++ b/id/toolkit/chrome/global/aboutSupport.properties
@@ -84,5 +84,5 @@ minLibVersions = Versi minimum diharapkan
 loadedLibVersions = Versi yang digunakan
 
 hasSeccompBPF = Seccomp-BPF (Pemfilteran Pemanggilan Sistem - System Call Filtering)
-canSandboxContent = Penggunaan Bak Pasir Proses Konten
-canSandboxMedia = Penggunaan Bak Pasir Plugin Media
+canSandboxContent = Pengotakpasiran Proses Konten
+canSandboxMedia = Pengotakpasiran Plugin Media
