--- a/id/security/manager/chrome/pippki/pippki.properties
+++ b/id/security/manager/chrome/pippki/pippki.properties
@@ -76,7 +76,11 @@ pageInfo_Privacy_None3=Laman yang ditampilkan tidak dienkripsi.
 # LOCALIZATION NOTE (pageInfo_EncryptionWithBitsAndProtocol): %1$S is the name of the encryption standard,
 # %2$S is the key size of the cipher.
 # %3$S is protocol version like "SSL 3" or "TLS 1.2"
+pageInfo_EncryptionWithBitsAndProtocol=Sambungan Terenkripsi (%1$S, kunci %2$S bita, %3$S)
+pageInfo_Privacy_Encrypted1=Laman yang dilihat telah dienkripsi sebelum dikirim melalui Internet.
+pageInfo_Privacy_Encrypted2=Enkripsi membuat informasi yang disampaikan antar komputer lebih sulit dilihat oleh pihak yang tidak diizinkan. Oleh karenanya, sangat tidak umum seseorang mampu membaca laman ini saat ditransfer melalui jaringan.
 pageInfo_MixedContent=Sambungan Terenkripsi Sebagian
+pageInfo_Privacy_Broken1=Beberapa bagian laman yang Anda lihat tidak dienkripsi atau enkripsinya tidak cukup kuat sebelum dikirim melalui Internet.
 
 #Cert Viewer
 certDetails=Penampil Sertifikat:
@@ -143,12 +147,16 @@ writeFileUnknownError=Kesalahan tidak dikenali
 addExceptionBrandedWarning2=Anda akan membuat pengaturan khusus yang berbeda dengan pengaturan bawaan %S untuk mengidentifikasi situs ini.
 addExceptionInvalidHeader=Situs ini mencoba mengidentifikasi dirinya sendiri dengan informasi yang tidak valid.
 addExceptionDomainMismatchShort=Situs Salah
+addExceptionDomainMismatchLong2=Sertifikat dimiliki oleh situs lain yang berbeda, yang mengindikasikan bahwa ada pihak yang menyamar sebagai situs ini.
 addExceptionExpiredShort=Informasi yang Kuno
+addExceptionExpiredLong2=Sertifikat saat ini tidak valid. Sertifikat ini mungkin telah dicuri atau hilang, dan dapat digunakan oleh pihak tertentu untuk menyamar sebagai situs ini.
 addExceptionUnverifiedOrBadSignatureShort=Identitas Tidak Dikenali
 addExceptionValidShort=Sertifikat Valid
 addExceptionValidLong=Situs ini menyediakan identifikasi yang valid dan terverifikasi. Tidak perlu dimasukkan ke dalam pengecualian.
 addExceptionCheckingShort=Memeriksa Informasi
+addExceptionCheckingLong2=Mencoba mengidentifikasi situs ini…
 addExceptionNoCertShort=Tidak ada informasi tersedia
+addExceptionNoCertLong2=Gagal mendapatkan status identifikasi situs ini.
 addExceptionConnectionFailed=Sambungan Gagal
 
 #Certificate Exists in database
