--- a/id/browser/chrome/browser/shellservice.properties
+++ b/id/browser/chrome/browser/shellservice.properties
@@ -10,12 +10,16 @@ safeModeLabel=%S Mode &Aman
 setDefaultBrowserMessage2          = Dapatkan manfaat maksimal %S dengan menjadikannya peramban web baku sistem Anda
 setDefaultBrowserOptions.label     = Pengaturan
 setDefaultBrowserOptions.accesskey = P
+setDefaultBrowserNotNow.label      = Jangan sekarang
+setDefaultBrowserNotNow.accesskey  = J
 setDefaultBrowserNever.label       = Jangan tanyakan lagi
 setDefaultBrowserNever.accesskey   = D
 
 # LOCALIZATION NOTE (setDefaultBrowserTitle, setDefaultBrowserMessage, setDefaultBrowserDontAsk, setDefaultBrowserAlertConfirm.label, setDefaultBrowserAlertNotNow.label):
 # These strings are used as an alternative to the ones above, in a modal dialog.
 # %S will be replaced by brandShortName
+setDefaultBrowserTitle=Peramban Baku
+setDefaultBrowserMessage=%S belum ditetapkan menjadi program peramban web default Anda. Apakah Anda ingin menjadikannya program peramban web default?
 
 desktopBackgroundLeafNameWin=Gambar Latar Belakang Desktop.bmp
 DesktopBackgroundDownloading=Menyimpan Gambar…
