--- a/sv-SE/browser/chrome/browser/loop/loop.properties
+++ b/sv-SE/browser/chrome/browser/loop/loop.properties
@@ -10,11 +10,11 @@ clientShortname2=Firefox Hello
 
 ## LOCALIZATION_NOTE(first_time_experience.title): clientShortname will be
 ## replaced by the brand name
-first_time_experience_title={{clientShortname}} — Gå med i konversation
+first_time_experience_title={{clientShortname}} — Gå med i en konversation
 first_time_experience_button_label=Kom igång
 
-share_link_header_text=Dela denna länk för att bjuda in någon att tala:
-invite_header_text=Bjud in någon.
+share_link_header_text=Dela denna länk för att bjuda in någon för samtal:
+invite_header_text=Bjud in någon att gå med.
 
 ## LOCALIZATION NOTE(invitee_name_label): Displayed when obtaining a url.
 ## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#precall-firstrun
@@ -62,7 +62,7 @@ problem_accessing_account=Det uppstod ett problem med att komma åt ditt konto
 ## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error for location
 retry_button=Försök igen
 
-share_email_subject4={{clientShortname}} — Gå med i konversation
+share_email_subject4={{clientShortname}} — Gå med i en konversation
 ## LOCALIZATION NOTE (share_email_body4): In this item, don't translate the
 ## part between {{..}} and leave the \r\n\r\n part alone
 share_email_body4=Hej! \n\nGå med mig för en videokonversation med {{clientShortname}}: \n\nDu behöver inte ladda ner eller installera något. Kopiera och klistra in adressen i din webbläsare:\n\n{{callUrl}} \n\nOm du vill kan du också läsa mer om {{clientShortname}} på {{learnMoreUrl}} \n\nVi hörs snart!
@@ -72,7 +72,7 @@ copy_url_button=Kopiera
 copy_url_button2=Kopiera länk
 copied_url_button=Kopierad!
 
-panel_footer_signin_or_signup_link=Logga in eller Registrera Dig\u0020
+panel_footer_signin_or_signup_link=Logga in eller registrera dig
 
 settings_menu_item_account=Konto
 settings_menu_item_settings=Inställningar
@@ -90,27 +90,27 @@ contacts_search_placesholder=Sök…
 ## new contact sub-panel.
 ## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
 ## for where this appears on the UI
-new_contact_button=Ny Kontakt
+new_contact_button=Ny kontakt
 ## LOCALIZATION NOTE (new_contact_name_placeholder, new_contact_email_placeholder):
 ## These are the placeholders for the fields for entering a new contact
 ## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
 ## and click the 'New Contact' button to see the fields.
 new_contact_name_placeholder=Namn
 new_contact_email_placeholder=E-post
-new_contact_fxos_phone_placeholder=Firefox OS Telefon\u0020
+new_contact_fxos_phone_placeholder=Firefox OS telefon
 new_contact_phone_placeholder2=Telefon
 
-contacts_blocked_contacts=Blockerade Kontakter
+contacts_blocked_contacts=Blockerade kontakter
 
 ## LOCALIZATION NOTE (add_contact_button):
 ## This is the button to actually add the new contact
 ## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
 ## and click the 'New Contact' button to see the fields.
-add_contact_button=Lägg till Kontakt
+add_contact_button=Lägg till kontakt
 ### LOCALIZATION NOTE (valid_email_text_description): This is displayed when
 ### the user enters an invalid email address, preventing the addition of the
 ### contact.
-valid_email_text_description=Ange en giltig e-postadress.
+valid_email_text_description=Ange en giltig e-postadress
 
 ## LOCALIZATION NOTE (add_or_import_contact_title): This is the subtitle of the panel
 ## at https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
@@ -122,7 +122,7 @@ import_contacts_button=Importera
 importing_contacts_progress_button=Importerar…
 ## LOCALIZATION NOTE(sync_contacts_button): This button is displayed in place of
 ## importing_contacts_button once contacts have been imported once.
-sync_contacts_button=Synkronisera Kontakter
+sync_contacts_button=Synkronisera kontakter
 
 ## LOCALIZATION NOTE(import_failed_description simple): Displayed when an import of
 ## contacts fails. This is displayed in the error field here:
@@ -140,26 +140,26 @@ remove_contact_menu_button=Ta bort kontakt
 confirm_delete_contact_alert=Är du säker på att du vill ta bort denna kontakt?
 ## LOCALIZATION NOTE(confirm_delete_contact_remove_button, confirm_delete_contact_cancel_button):
 ## These are displayed on the alert with confirm_delete_contact_alert
-confirm_delete_contact_remove_button=Ta bort Kontakt
+confirm_delete_contact_remove_button=Ta bort kontakt
 confirm_delete_contact_cancel_button=Avbryt
 
 ## LOCALIZATION NOTE(block_contact_menu_button): Displayed in the contact list in
 ## a pop-up menu next to the contact's name, used to block a contact from calling
 ## the user. https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
-block_contact_menu_button=Blockera Kontakt
+block_contact_menu_button=Blockera kontakt
 ## LOCALIZATION NOTE(unblock_contact_menu_button): Displayed in the contact list in
 ## a pop-up menu next to the contact's name, used to unblock a contact and allow them
 ## to call the user. https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
-unblock_contact_menu_button=Avblockera Kontakt
+unblock_contact_menu_button=Avblockera kontakt
 
 ## LOCALIZATION NOTE(edit_contact_menu_button): Displayed in the contact list in a
 ## pop-up menu next to the contact's name.
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
-edit_contact_menu_button=Redigera Kontakt…
+edit_contact_menu_button=Redigera kontakt…
 ## LOCALIZATION NOTE(edit_contact_tile): This is the subtitle of the edit contact
 ## panel. It is displayed when Edit Contact is selected.
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
-edit_contact_title=Redigera Kontakt
+edit_contact_title=Redigera kontakt
 ## LOCALIZATION NOTE(edit_contact_name_label, edit_contact_email_label):
 ## These fields are display when the Edit Contact button is selected.
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
@@ -174,17 +174,17 @@ edit_contact_done_button=Klar
 ## LOCALIZATION NOTE(audio_call_menu_button): Displayed in the contact list in a
 ## pop-up menu next to the contact's name.
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
-audio_call_menu_button=Ljud konversation
+audio_call_menu_button=Ljudkonversation
 
 ## LOCALIZATION NOTE(video_call_menu_button): Displayed in the contact list in a
 ## pop-up menu next to the contact's name.
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
-video_call_menu_button=Video konversation
+video_call_menu_button=Videokonversation
 
 # Conversation Window Strings
 
 initiate_call_button_label2=Redo att starta din konversation?
-incoming_call_title2=Konversations begäran
+incoming_call_title2=Konversationsbegäran
 incoming_call_accept_button=Acceptera
 incoming_call_accept_audio_only_tooltip=Acceptera med ljud
 incoming_call_accept_audio_video_tooltip=Acceptera med video
@@ -253,7 +253,7 @@ cancel_button=Avbryt
 
 cannot_start_call_session_not_ready=Kan inte påbörja samtal, en session är inte klar.
 network_disconnected=Nätverksanslutningen avslutades plötsligt.
-connection_error_see_console_notification=Samtal misslyckades; se konsolen för detaljer\u0020
+connection_error_see_console_notification=Samtal misslyckades; se konsolen för detaljer.
 
 ## LOCALIZATION NOTE (legal_text_and_links3): In this item, don't translate the
 ## parts between {{..}} because these will be replaced with links with the labels
