Bug 1130476 - webrtc: Use plural form when using application sharing in multiple tabs. r=me

--- a/de/browser/chrome/browser/webrtcIndicator.properties
+++ b/de/browser/chrome/browser/webrtcIndicator.properties
@@ -39,7 +39,7 @@ webrtcIndicator.sharingMicrophoneWithNTabs.menuitem = #1 Tab Zugriff auf Mikrofo
 # LOCALIZATION NOTE (webrtcIndicator.sharingApplicationWithNTabs.menuitem):
 # Semicolon-separated list of plural forms. See:
 # http://developer.mozilla.org/en/docs/Localization_and_Plurals
-webrtcIndicator.sharingApplicationWithNTabs.menuitem = #1 Tab Zugriff auf Anwendung erlaubt;#1 Tabs Zugriff auf Anwendung erlaubt
+webrtcIndicator.sharingApplicationWithNTabs.menuitem = #1 Tab Zugriff auf Anwendung erlaubt;#1 Tabs Zugriff auf Anwendungen erlaubt
 # LOCALIZATION NOTE (webrtcIndicator.sharingScreenWithNTabs.menuitem):
 # Semicolon-separated list of plural forms. See:
 # http://developer.mozilla.org/en/docs/Localization_and_Plurals
