Pontoon: Update Hebrew (he) localization of Firefox Co-authored-by: Itiel <itiel_yn8@walla.com>

--- a/he/devtools/client/debugger.properties
+++ b/he/devtools/client/debugger.properties
@@ -665,6 +665,17 @@ downloadFile.accesskey=ה
 # LOCALIZATION NOTE (inlinePreview.hide.label): Context menu item
 # for hiding the inline preview block
 
+# LOCALIZATION NOTE (settings.button.label): Label for Settings button
+settings.button.label=הגדרות מנפה השגיאות
+
+# LOCALIZATION NOTE (settings.disableJavaScript.label): Context menu item
+# label for disabling JavaScript
+settings.disableJavaScript.label=השבתת JavaScript
+
+# LOCALIZATION NOTE (settings.disableJavaScript.tooltip): Context menu item
+# tooltip for disabling JavaScript
+settings.disableJavaScript.tooltip=השבתת JavaScript (דרושה הפעלה מחדש)
+
 # LOCALIZATION NOTE (preview.noProperties): Label shown in the preview
 # popup when there are no properties to show.
 preview.noProperties=ללא מאפיינים
@@ -714,6 +725,9 @@ pauseOnAnyXHR=השהיה על כל כתובת שהיא
 # watchpoints sub-menu to add a "get" watchpoint on an object property.
 
 # LOCALIZATION NOTE (watchpoints.setWatchpoint): This is the text that appears in the
+# watchpoints submenu to add a "set" watchpoint on an object property.
+
+# LOCALIZATION NOTE (watchpoints.getOrSetWatchpoint): This is the text that appears in the
 # watchpoints submenu to add a "set" watchpoint on an object property.
 
 # LOCALIZATION NOTE (watchpoints.removeWatchpoint): This is the text that appears in the
