--- a/he/devtools/client/netmonitor.properties
+++ b/he/devtools/client/netmonitor.properties
@@ -231,6 +231,7 @@ networkMenu.ws.summary.tooltip.framesTotalSize=הגודל הכולל של ההו
 # LOCALIZATION NOTE (networkMenu.ws.summary.label.framesTranferredSize): A label showing
 # summary size info related to the current list of WS messages
 # %1$S is the total size of the transferred data, %2$S is the size of sent data, %3$S is the size of received data.
+networkMenu.ws.summary.label.framesTranferredSize=%1$S סה״כ, %2$S נשלחו, %3$S התקבלו
 
 # LOCALIZATION NOTE (networkMenu.ws.summary.tooltip.framesTotalTime): A tooltip explaining
 # what framesTotalTime displays
