--- a/sv-SE/browser/chrome/browser/browser.properties
+++ b/sv-SE/browser/chrome/browser/browser.properties
@@ -1228,3 +1228,7 @@ confirmationHint.breakageReport.label = Rapport skickad. Tack!
 # Used by the export of user's live bookmarks to an OPML file as a title for the file.
 # %S will be replaced with brandShortName
 livebookmarkMigration.title                      = %S aktiva bokmärken
+
+# LOCALIZATION NOTE (gnomeSearchProviderSearch):
+# Used for search by Gnome Shell activity screen, %S is a searched string.
+gnomeSearchProviderSearch=Sök på webben efter %S
