--- a/he/devtools/client/webconsole.properties
+++ b/he/devtools/client/webconsole.properties
@@ -222,12 +222,30 @@ webconsole.menu.selectAll.accesskey=כ
 # Label used for a context-menu item displayed for object/variable logs. Clicking on it
 # opens the webconsole sidebar for the logged variable.
 webconsole.menu.openInSidebar.label=פתיחה בסרגל הצד
+
+# LOCALIZATION NOTE (webconsole.menu.openInSidebar.label)
+# Label used for a context-menu item displayed for object/variable logs. Clicking on it
+# opens the webconsole sidebar for the logged variable.
+webconsole.menu.openInSidebar.label1=חקירת הרכיב בסרגל הצד
 webconsole.menu.openInSidebar.accesskey=ס
 
 # LOCALIZATION NOTE (webconsole.menu.exportClipboard.label)
 # Label used for a context-menu item displayed on the output. Clicking on it
 # copies the entire output of the console to the clipboard.
 webconsole.menu.exportClipboard.label=ייצוא הודעות נראות ללוח העריכה
+
+# LOCALIZATION NOTE (webconsole.menu.timeWarp.label)
+# Label used for a context-menu item displayed for any log. Clicking on it will
+# jump to the execution point where the log item was generated.
+webconsole.menu.timeWarp.label=קפיצה לכאן
+
+# LOCALIZATION NOTE (webconsole.jumpButton.tooltip)
+# Label used for the tooltip on the "jump" button in the console. It's displayed when
+# the user recorded execution with WebReplay, is now paused in the debugger, and hover a
+# message in the console output. Clicking on it will jump to the execution point where the
+# log item was generated.
+# Parameters: %S is the level of the message.
+webconsole.jumpButton.tooltip=‏%S - קפיצה לכאן
 
 # LOCALIZATION NOTE (webconsole.menu.exportSubmenu.label)
 # Label used for a context-menu item displayed on the output. Clicking on it
@@ -244,19 +262,6 @@ webconsole.menu.exportSubmenu.exportCliboard.label=לוח עריכה
 # opens a file picker to allow the user save a file containing
 # the output of the console.
 webconsole.menu.exportSubmenu.exportFile.label=קובץ
-
-# LOCALIZATION NOTE (webconsole.menu.timeWarp.label)
-# Label used for a context-menu item displayed for any log. Clicking on it will
-# jump to the execution point where the log item was generated.
-webconsole.menu.timeWarp.label=קפיצה לכאן
-
-# LOCALIZATION NOTE (webconsole.jumpButton.tooltip)
-# Label used for the tooltip on the "jump" button in the console. It's displayed when
-# the user recorded execution with WebReplay, is now paused in the debugger, and hover a
-# message in the console output. Clicking on it will jump to the execution point where the
-# log item was generated.
-# Parameters: %S is the level of the message.
-webconsole.jumpButton.tooltip=‏%S - קפיצה לכאן
 
 # LOCALIZATION NOTE (webconsole.clearButton.tooltip)
 # Label used for the tooltip on the clear logs button in the console top toolbar bar.
@@ -386,9 +391,6 @@ webconsole.console.settings.menu.item.autocomplete.tooltip=הפעלת אפשרו
 webconsole.console.settings.menu.item.enablePersistentLogs.label=קיבוע רישום
 # LOCALIZATION NOTE (webconsole.console.settings.menu.item.enablePersistentLogs.tooltip)
 webconsole.console.settings.menu.item.enablePersistentLogs.tooltip=כשאפשרות זו מופעלת, הפלט לא יימחק עם כל מעבר לעמוד חדש
-
-# LOCALIZATION NOTE (webconsole.console.settings.menu.item.eagerEvaluation.label)
-# LOCALIZATION NOTE (webconsole.console.settings.menu.item.eagerEvaluation.tooltip)
 
 # LOCALIZATION NOTE (webconsole.console.settings.menu.item.instantEvaluation.label)
 # LOCALIZATION NOTE (webconsole.console.settings.menu.item.instantEvaluation.tooltip)
@@ -570,3 +572,6 @@ webconsole.input.openJavaScriptFileFilter=קובצי JavaScript
 # LOCALIZATION NOTE (webconsole.input.selector.tooltip): This is the tooltip
 # shown when users select a thread that they want to evaluate an
 # expression for.
+
+# LOCALIZATION NOTE (webconsole.group.cookieSameSiteLaxByDefaultEnabled): do not translate 'sameSite'.
+# LOCALIZATION NOTE (webconsole.group.cookieSameSiteLaxByDefaultDisabled): do not translate 'sameSite'.
