Pontoon: Update Welsh (cy) localization of Firefox Co-authored-by: Rhoslyn Prys <rprys@posteo.net>

--- a/cy/browser/chrome/browser/browser.properties
+++ b/cy/browser/chrome/browser/browser.properties
@@ -1228,3 +1228,7 @@ confirmationHint.breakageReport.label = Anfonwyd yr adroddiad. Diolch!
 # Used by the export of user's live bookmarks to an OPML file as a title for the file.
 # %S will be replaced with brandShortName
 livebookmarkMigration.title                      = Nodau Tudalen Byw %S
+
+# LOCALIZATION NOTE (gnomeSearchProviderSearch):
+# Used for search by Gnome Shell activity screen, %S is a searched string.
+gnomeSearchProviderSearch=Chwiliwch ar y we am %S
