--- a/cy/devtools/client/webconsole.properties
+++ b/cy/devtools/client/webconsole.properties
@@ -226,12 +226,30 @@ webconsole.menu.selectAll.accesskey=p
 # Label used for a context-menu item displayed for object/variable logs. Clicking on it
 # opens the webconsole sidebar for the logged variable.
 webconsole.menu.openInSidebar.label=Agor yn y bar ochr
+
+# LOCALIZATION NOTE (webconsole.menu.openInSidebar.label)
+# Label used for a context-menu item displayed for object/variable logs. Clicking on it
+# opens the webconsole sidebar for the logged variable.
+webconsole.menu.openInSidebar.label1=Archwiliwch y gwrthrych yn y Bar Ochr
 webconsole.menu.openInSidebar.accesskey=A
 
 # LOCALIZATION NOTE (webconsole.menu.exportClipboard.label)
 # Label used for a context-menu item displayed on the output. Clicking on it
 # copies the entire output of the console to the clipboard.
 webconsole.menu.exportClipboard.label=Allforio negeseuon gweladwy i'r clipfwrdd
+
+# LOCALIZATION NOTE (webconsole.menu.timeWarp.label)
+# Label used for a context-menu item displayed for any log. Clicking on it will
+# jump to the execution point where the log item was generated.
+webconsole.menu.timeWarp.label=Symud yma
+
+# LOCALIZATION NOTE (webconsole.jumpButton.tooltip)
+# Label used for the tooltip on the "jump" button in the console. It's displayed when
+# the user recorded execution with WebReplay, is now paused in the debugger, and hover a
+# message in the console output. Clicking on it will jump to the execution point where the
+# log item was generated.
+# Parameters: %S is the level of the message.
+webconsole.jumpButton.tooltip=%S - Neidio yma
 
 # LOCALIZATION NOTE (webconsole.menu.exportSubmenu.label)
 # Label used for a context-menu item displayed on the output. Clicking on it
@@ -248,19 +266,6 @@ webconsole.menu.exportSubmenu.exportCliboard.label=Clipfwrdd
 # opens a file picker to allow the user save a file containing
 # the output of the console.
 webconsole.menu.exportSubmenu.exportFile.label=Ffeil
-
-# LOCALIZATION NOTE (webconsole.menu.timeWarp.label)
-# Label used for a context-menu item displayed for any log. Clicking on it will
-# jump to the execution point where the log item was generated.
-webconsole.menu.timeWarp.label=Symud yma
-
-# LOCALIZATION NOTE (webconsole.jumpButton.tooltip)
-# Label used for the tooltip on the "jump" button in the console. It's displayed when
-# the user recorded execution with WebReplay, is now paused in the debugger, and hover a
-# message in the console output. Clicking on it will jump to the execution point where the
-# log item was generated.
-# Parameters: %S is the level of the message.
-webconsole.jumpButton.tooltip=%S - Neidio yma
 
 # LOCALIZATION NOTE (webconsole.clearButton.tooltip)
 # Label used for the tooltip on the clear logs button in the console top toolbar bar.
@@ -391,11 +396,6 @@ webconsole.console.settings.menu.item.autocomplete.tooltip=Os fyddwch yn galluog
 webconsole.console.settings.menu.item.enablePersistentLogs.label=Cofnodion Parhaus
 # LOCALIZATION NOTE (webconsole.console.settings.menu.item.enablePersistentLogs.tooltip)
 webconsole.console.settings.menu.item.enablePersistentLogs.tooltip=Os ydych wedi galluogi'r dewis hwn ni fydd yr allbwn yn cael ei glirio bob tro fyddwch yn symud i dudalen newydd
-
-# LOCALIZATION NOTE (webconsole.console.settings.menu.item.eagerEvaluation.label)
-webconsole.console.settings.menu.item.eagerEvaluation.label=Eager Evaluation
-# LOCALIZATION NOTE (webconsole.console.settings.menu.item.eagerEvaluation.tooltip)
-webconsole.console.settings.menu.item.eagerEvaluation.tooltip=Os ydych chi'n galluogi'r opsiwn hwn, bydd y mewnbwn yn cael ei werthuso'n eiddgar wrth i chi deipio ynddo
 
 # LOCALIZATION NOTE (webconsole.console.settings.menu.item.instantEvaluation.label)
 webconsole.console.settings.menu.item.instantEvaluation.label=Gwerthuso ar Unwaith
