--- a/cy/devtools/client/debugger.properties
+++ b/cy/devtools/client/debugger.properties
@@ -686,6 +686,17 @@ inlinePreview.show.label=Dangos rhagolwg mewnlin
 # for hiding the inline preview block
 inlinePreview.hide.label=Cuddio rhagolwg mewnlin
 
+# LOCALIZATION NOTE (settings.button.label): Label for Settings button
+settings.button.label=Dewisiadau Dadfygio
+
+# LOCALIZATION NOTE (settings.disableJavaScript.label): Context menu item
+# label for disabling JavaScript
+settings.disableJavaScript.label=Analluogi JavaScript
+
+# LOCALIZATION NOTE (settings.disableJavaScript.tooltip): Context menu item
+# tooltip for disabling JavaScript
+settings.disableJavaScript.tooltip=Yn analluogi JavaScript (Angen ail gychwyn)
+
 # LOCALIZATION NOTE (preview.noProperties): Label shown in the preview
 # popup when there are no properties to show.
 preview.noProperties=Dim priodweddau
