--- a/sv-SE/suite/chrome/mailnews/messenger.properties
+++ b/sv-SE/suite/chrome/mailnews/messenger.properties
@@ -371,6 +371,8 @@ newMailAlert_message=#1 tog emot #2 nytt meddelande;#1 tog emot #2 nya meddeland
 
 # For the Quota tab in the mail folder properties dialog
 quotaUsedFree=%S av %S kB används
+
+# For the Quota tab in the mail folder properties dialog
 quotaPercentUsed=%S%% fullt
 
 # for message views
@@ -476,6 +478,8 @@ mailServerLoginFailedTitleWithAccount=Inloggningen till kontot "%S" misslyckades
 mailServerLoginFailed2=Inloggningen på servern %1$S med användarnamn %2$S misslyckades.
 mailServerLoginFailedRetryButton=&Försök igen
 mailServerLoginFailedEnterNewPasswordButton=&Ange nytt lösenord
+
+confirmMarkAllFoldersReadTitle=Märk alla mappar som lästa
 
 # LOCALIZATION NOTE (junkBarMessage): %S is the brandname
 junkBarMessage=%S tror att det här meddelandet är skräppost.
