Pontoon: Update Ukrainian (uk) localization of Firefox Co-authored-by: Artem Polivanchuk <a.polivanchuk@outlook.com>

--- a/uk/devtools/client/webconsole.properties
+++ b/uk/devtools/client/webconsole.properties
@@ -226,12 +226,30 @@ webconsole.menu.selectAll.accesskey=и
 # Label used for a context-menu item displayed for object/variable logs. Clicking on it
 # opens the webconsole sidebar for the logged variable.
 webconsole.menu.openInSidebar.label=Відкрити в бічній панелі
+
+# LOCALIZATION NOTE (webconsole.menu.openInSidebar.label)
+# Label used for a context-menu item displayed for object/variable logs. Clicking on it
+# opens the webconsole sidebar for the logged variable.
+webconsole.menu.openInSidebar.label1=Інспектувати об'єкт у бічній панелі
 webconsole.menu.openInSidebar.accesskey=б
 
 # LOCALIZATION NOTE (webconsole.menu.exportClipboard.label)
 # Label used for a context-menu item displayed on the output. Clicking on it
 # copies the entire output of the console to the clipboard.
 webconsole.menu.exportClipboard.label=Експорт видимих повідомлень в буфер обміну
+
+# LOCALIZATION NOTE (webconsole.menu.timeWarp.label)
+# Label used for a context-menu item displayed for any log. Clicking on it will
+# jump to the execution point where the log item was generated.
+webconsole.menu.timeWarp.label=Перейти сюди
+
+# LOCALIZATION NOTE (webconsole.jumpButton.tooltip)
+# Label used for the tooltip on the "jump" button in the console. It's displayed when
+# the user recorded execution with WebReplay, is now paused in the debugger, and hover a
+# message in the console output. Clicking on it will jump to the execution point where the
+# log item was generated.
+# Parameters: %S is the level of the message.
+webconsole.jumpButton.tooltip=%S - Перейти сюди
 
 # LOCALIZATION NOTE (webconsole.menu.exportSubmenu.label)
 # Label used for a context-menu item displayed on the output. Clicking on it
@@ -248,19 +266,6 @@ webconsole.menu.exportSubmenu.exportCliboard.label=Буфер обміну
 # opens a file picker to allow the user save a file containing
 # the output of the console.
 webconsole.menu.exportSubmenu.exportFile.label=Файл
-
-# LOCALIZATION NOTE (webconsole.menu.timeWarp.label)
-# Label used for a context-menu item displayed for any log. Clicking on it will
-# jump to the execution point where the log item was generated.
-webconsole.menu.timeWarp.label=Перейти сюди
-
-# LOCALIZATION NOTE (webconsole.jumpButton.tooltip)
-# Label used for the tooltip on the "jump" button in the console. It's displayed when
-# the user recorded execution with WebReplay, is now paused in the debugger, and hover a
-# message in the console output. Clicking on it will jump to the execution point where the
-# log item was generated.
-# Parameters: %S is the level of the message.
-webconsole.jumpButton.tooltip=%S - Перейти сюди
 
 # LOCALIZATION NOTE (webconsole.clearButton.tooltip)
 # Label used for the tooltip on the clear logs button in the console top toolbar bar.
@@ -391,11 +396,6 @@ webconsole.console.settings.menu.item.autocomplete.tooltip=Якщо увімкн
 webconsole.console.settings.menu.item.enablePersistentLogs.label=Постійне журналювання
 # LOCALIZATION NOTE (webconsole.console.settings.menu.item.enablePersistentLogs.tooltip)
 webconsole.console.settings.menu.item.enablePersistentLogs.tooltip=Якщо ви увімкнете цей параметр, результати не очищатимуться щоразу при переході до нової сторінки
-
-# LOCALIZATION NOTE (webconsole.console.settings.menu.item.eagerEvaluation.label)
-webconsole.console.settings.menu.item.eagerEvaluation.label=Швидка оцінка
-# LOCALIZATION NOTE (webconsole.console.settings.menu.item.eagerEvaluation.tooltip)
-webconsole.console.settings.menu.item.eagerEvaluation.tooltip=Якщо увімкнути цю опцію, введення буде швидко оцінено під час його вводу
 
 # LOCALIZATION NOTE (webconsole.console.settings.menu.item.instantEvaluation.label)
 webconsole.console.settings.menu.item.instantEvaluation.label=Миттєва оцінка
