Pontoon: Update Korean (ko) localization of Firefox Co-authored-by: Kim YoungCheon <circcc@gmail.com>

--- a/ko/devtools/client/debugger.properties
+++ b/ko/devtools/client/debugger.properties
@@ -686,6 +686,17 @@ inlinePreview.show.label=인라인 미리보기 표시
 # for hiding the inline preview block
 inlinePreview.hide.label=인라인 미리보기 숨기기
 
+# LOCALIZATION NOTE (settings.button.label): Label for Settings button
+settings.button.label=디버거 설정
+
+# LOCALIZATION NOTE (settings.disableJavaScript.label): Context menu item
+# label for disabling JavaScript
+settings.disableJavaScript.label=JavaScript 끄기
+
+# LOCALIZATION NOTE (settings.disableJavaScript.tooltip): Context menu item
+# tooltip for disabling JavaScript
+settings.disableJavaScript.tooltip=JavaScript 끄기 (새로 고침 필요)
+
 # LOCALIZATION NOTE (preview.noProperties): Label shown in the preview
 # popup when there are no properties to show.
 preview.noProperties=속성 없음
