Pontoon: Update Korean (ko) localization of Firefox Co-authored-by: Kim YoungCheon <circcc@gmail.com>

--- a/ko/browser/chrome/browser/browser.properties
+++ b/ko/browser/chrome/browser/browser.properties
@@ -1057,7 +1057,7 @@ e10s.accessibilityNotice.mainMessage2 = 새 %S 기능 호환성 문제 때문에
 
 e10s.accessibilityNotice.acceptButton.label = 확인
 e10s.accessibilityNotice.acceptButton.accesskey = O
-e10s.accessibilityNotice.enableAndRestart.label = 사용 (다시 시작 해야 함)
+e10s.accessibilityNotice.enableAndRestart.label = 사용 (다시 시작해야 함)
 e10s.accessibilityNotice.enableAndRestart.accesskey = E
 
 # LOCALIZATION NOTE (e10s.accessibilityNotice.jawsMessage): %S is brandShortName
@@ -1228,3 +1228,6 @@ confirmationHint.breakageReport.label = 보고되었습니다. 감사합니다!
 # Used by the export of user's live bookmarks to an OPML file as a title for the file.
 # %S will be replaced with brandShortName
 livebookmarkMigration.title                      = %S 라이브 북마크
+
+# LOCALIZATION NOTE (gnomeSearchProviderSearch):
+# Used for search by Gnome Shell activity screen, %S is a searched string.
