--- a/ko/devtools/client/webconsole.properties
+++ b/ko/devtools/client/webconsole.properties
@@ -226,6 +226,11 @@ webconsole.menu.selectAll.accesskey=A
 # Label used for a context-menu item displayed for object/variable logs. Clicking on it
 # opens the webconsole sidebar for the logged variable.
 webconsole.menu.openInSidebar.label=탐색창에 열기
+
+# LOCALIZATION NOTE (webconsole.menu.openInSidebar.label)
+# Label used for a context-menu item displayed for object/variable logs. Clicking on it
+# opens the webconsole sidebar for the logged variable.
+webconsole.menu.openInSidebar.label1=탐색창에서 객체 검사
 webconsole.menu.openInSidebar.accesskey=V
 
 # LOCALIZATION NOTE (webconsole.menu.exportClipboard.label)
