Pontoon: Update Korean (ko) localization of Firefox Co-authored-by: Kim YoungCheon <circcc@gmail.com>

--- a/ko/browser/chrome/browser/browser.properties
+++ b/ko/browser/chrome/browser/browser.properties
@@ -1231,3 +1231,4 @@ livebookmarkMigration.title                      = %S 라이브 북마크
 
 # LOCALIZATION NOTE (gnomeSearchProviderSearch):
 # Used for search by Gnome Shell activity screen, %S is a searched string.
+gnomeSearchProviderSearch=%S 웹 검색
