--- a/zh-TW/suite/chrome/mailnews/messenger.properties
+++ b/zh-TW/suite/chrome/mailnews/messenger.properties
@@ -365,6 +365,8 @@ newMailAlert_message=#1 收到 #2 封新訊息
 
 # For the Quota tab in the mail folder properties dialog
 quotaUsedFree=已用 %S／%S KB
+
+# For the Quota tab in the mail folder properties dialog
 quotaPercentUsed=已用 %S%%
 
 # for message views
@@ -470,6 +472,9 @@ mailServerLoginFailedTitleWithAccount=「%S」帳號登入失敗
 mailServerLoginFailed2=以使用者名稱 %2$S 登入帳號 %1$S 失敗。
 mailServerLoginFailedRetryButton=重試 (&R)
 mailServerLoginFailedEnterNewPasswordButton=輸入新密碼(&E)
+
+confirmMarkAllFoldersReadTitle=將所有信件匣標示為已讀
+confirmMarkAllFoldersReadMessage=您確定要將此帳號所有信件匣中的所有郵件標示為已讀？
 
 # LOCALIZATION NOTE (junkBarMessage): %S is the brandname
 junkBarMessage=%S 認為此訊息是垃圾信。
