Pontoon: Update Chinese (Taiwan) (zh-TW) localization of Firefox Co-authored-by: Pin-guang Chen <petercpg@mail.moztw.org>

--- a/zh-TW/browser/chrome/browser/browser.properties
+++ b/zh-TW/browser/chrome/browser/browser.properties
@@ -1228,3 +1228,7 @@ confirmationHint.breakageReport.label = 已回報，感謝您！
 # Used by the export of user's live bookmarks to an OPML file as a title for the file.
 # %S will be replaced with brandShortName
 livebookmarkMigration.title                      = %S 即時書籤
+
+# LOCALIZATION NOTE (gnomeSearchProviderSearch):
+# Used for search by Gnome Shell activity screen, %S is a searched string.
+gnomeSearchProviderSearch=到網路上搜尋 %S
