--- a/zh-TW/devtools/client/debugger.properties
+++ b/zh-TW/devtools/client/debugger.properties
@@ -686,6 +686,17 @@ inlinePreview.show.label=顯示行內預覽
 # for hiding the inline preview block
 inlinePreview.hide.label=隱藏行內預覽
 
+# LOCALIZATION NOTE (settings.button.label): Label for Settings button
+settings.button.label=除錯器設定
+
+# LOCALIZATION NOTE (settings.disableJavaScript.label): Context menu item
+# label for disabling JavaScript
+settings.disableJavaScript.label=關閉 JavaScript
+
+# LOCALIZATION NOTE (settings.disableJavaScript.tooltip): Context menu item
+# tooltip for disabling JavaScript
+settings.disableJavaScript.tooltip=停用 JavaScript（需要重新整理頁面）
+
 # LOCALIZATION NOTE (preview.noProperties): Label shown in the preview
 # popup when there are no properties to show.
 preview.noProperties=無屬性
