--- a/en-GB/suite/chrome/mailnews/messenger.properties
+++ b/en-GB/suite/chrome/mailnews/messenger.properties
@@ -372,6 +372,8 @@ newMailAlert_message=#1 received #2 new message;#1 received #2 new messages
 
 # For the Quota tab in the mail folder properties dialog
 quotaUsedFree=%S of %S kB used
+
+# For the Quota tab in the mail folder properties dialog
 quotaPercentUsed=%S%% full
 
 # for message views
@@ -477,6 +479,9 @@ mailServerLoginFailedTitleWithAccount=Login to account "%S" failed
 mailServerLoginFailed2=Login to server %1$S with username %2$S failed.
 mailServerLoginFailedRetryButton=&Retry
 mailServerLoginFailedEnterNewPasswordButton=&Enter New Password
+
+confirmMarkAllFoldersReadTitle=Mark All Folders Read
+confirmMarkAllFoldersReadMessage=Are you sure you want to mark all messages in all folders of this account as read?
 
 # LOCALIZATION NOTE (junkBarMessage): %S is the brandname
 junkBarMessage=%S regards this message as junk.
