--- a/eu/toolkit/chrome/mozapps/handling/handling.properties
+++ b/eu/toolkit/chrome/mozapps/handling/handling.properties
@@ -7,7 +7,7 @@ protocol.description=Lotura hau aplikazio batek ireki behar du.
 protocol.choices.label=Bidali hona:
 protocol.checkbox.label=Gogoratu nire aukera %S loturentzat.
 protocol.checkbox.accesskey=G
-protocol.checkbox.extra=Hau %S-(r)en hobespenetan alda daiteke.
+protocol.checkbox.extra=Hau %S(r)en hobespenetan alda daiteke.
 
 # Displayed under the name of a protocol handler in the Launch Application dialog.
 privatebrowsing.disabled.label=Leiho pribatuetan desgaituta
