Pontoon: Update Finnish (fi) localization of Firefox Co-authored-by: Jiri Grönroos <jiri.gronroos@iki.fi> Co-authored-by: Lasse Liehu <lasse.liehu@iki.fi>

--- a/fi/browser/installer/nsisstrings.properties
+++ b/fi/browser/installer/nsisstrings.properties
@@ -37,6 +37,7 @@ STUB_INSTALLING_LABEL2=Asennus meneillään…
 # number of lines available.
 STUB_INSTALLING_HEADLINE=Yksityisyys ensin.\nLiity $BrandProductNameiin.
 STUB_INSTALLING_BODY=Hanki myös muut yksityisyyden etusijalle laittavat tuotteemme ja lue, miten toimia verkossa fiksusti ja turvallisesti.
+STUB_INSTALLING_BODY2=$BrandShortName valmistuu tuossa tuokiossa.
 STUB_BLURB_FIRST1=Tähän asti nopein $BrandShortName
 STUB_BLURB_SECOND1=Nopeampi sivujen lataus ja välilehtien vaihto
 STUB_BLURB_THIRD1=Tehokas yksityinen selaus
