--- a/es-MX/browser/installer/nsisstrings.properties
+++ b/es-MX/browser/installer/nsisstrings.properties
@@ -27,12 +27,17 @@ STUB_CLEANUP_PAVEOVER_BUTTON=&Actualizar
 STUB_CLEANUP_REINSTALL_BUTTON=Re&instalar
 STUB_CLEANUP_CHECKBOX_LABEL=&Restaurar ajustes predeterminados y eliminar complementos antiguos para un óptimo rendimiento
 
+STUB_CLEANUP_PAVEOVER_BUTTON2=Actualizar
+STUB_CLEANUP_REINSTALL_BUTTON2=Reinstalar
+STUB_CLEANUP_CHECKBOX_LABEL2=Restaurar ajustes predeterminados y eliminar complementos antiguos para un rendimiento óptimo
+
 STUB_INSTALLING_LABEL2=Instalando ahora…
 # The \n in the next string is intended to force a nice-looking layout in en-US
 # and can be moved or deleted as needed. There's no practical limit on the
 # number of lines available.
 STUB_INSTALLING_HEADLINE=Pon tu privacidad en primer lugar.\nÚnete a $BrandProductName.
 STUB_INSTALLING_BODY=Obtén el resto de nuestros productos de privacidad y conoce cómo mantenerse más inteligente y seguro en línea.
+STUB_INSTALLING_HEADLINE2=Optimizando tu configuración para velocidad, privacidad y seguridad.
 STUB_BLURB_FIRST1=El $BrandShortName más rápido y responsivo hasta ahora
 STUB_BLURB_SECOND1=Cargas de páginas y cambios de pestañas más rápidos
 STUB_BLURB_THIRD1=Poderosa navegación privada
