Pontoon: Update Spanish (Mexico) (es-MX) localization of Firefox Co-authored-by: Roberto Alvarado <ralv888@gmail.com>

--- a/es-MX/browser/installer/nsisstrings.properties
+++ b/es-MX/browser/installer/nsisstrings.properties
@@ -38,6 +38,7 @@ STUB_INSTALLING_LABEL2=Instalando ahora…
 STUB_INSTALLING_HEADLINE=Pon tu privacidad en primer lugar.\nÚnete a $BrandProductName.
 STUB_INSTALLING_BODY=Obtén el resto de nuestros productos de privacidad y conoce cómo mantenerse más inteligente y seguro en línea.
 STUB_INSTALLING_HEADLINE2=Optimizando tu configuración para velocidad, privacidad y seguridad.
+STUB_INSTALLING_BODY2=$BrandShortName estará listo en unos momentos.
 STUB_BLURB_FIRST1=El $BrandShortName más rápido y responsivo hasta ahora
 STUB_BLURB_SECOND1=Cargas de páginas y cambios de pestañas más rápidos
 STUB_BLURB_THIRD1=Poderosa navegación privada
