--- a/es-MX/devtools/client/debugger.properties
+++ b/es-MX/devtools/client/debugger.properties
@@ -686,6 +686,17 @@ inlinePreview.show.label=Mostrar vista previa integrada
 # for hiding the inline preview block
 inlinePreview.hide.label=Ocultar vista previa integrada
 
+# LOCALIZATION NOTE (settings.button.label): Label for Settings button
+settings.button.label=Ajustes del depurador
+
+# LOCALIZATION NOTE (settings.disableJavaScript.label): Context menu item
+# label for disabling JavaScript
+settings.disableJavaScript.label=Deshabilitar JavaScript
+
+# LOCALIZATION NOTE (settings.disableJavaScript.tooltip): Context menu item
+# tooltip for disabling JavaScript
+settings.disableJavaScript.tooltip=Dehabilitar JavaScript (Requiere recargar)
+
 # LOCALIZATION NOTE (preview.noProperties): Label shown in the preview
 # popup when there are no properties to show.
 preview.noProperties=Sin propiedades
@@ -740,6 +751,10 @@ watchpoints.getWatchpoint=Lectura de propiedad
 # LOCALIZATION NOTE (watchpoints.setWatchpoint): This is the text that appears in the
 # watchpoints submenu to add a "set" watchpoint on an object property.
 watchpoints.setWatchpoint=Establecer propiedad
+
+# LOCALIZATION NOTE (watchpoints.getOrSetWatchpoint): This is the text that appears in the
+# watchpoints submenu to add a "set" watchpoint on an object property.
+watchpoints.getOrSetWatchpoint=Obtener o establecer la propiedad
 
 # LOCALIZATION NOTE (watchpoints.removeWatchpoint): This is the text that appears in the
 # context menu to delete a watchpoint on an object property.
