--- a/es-CL/devtools/client/debugger.properties
+++ b/es-CL/devtools/client/debugger.properties
@@ -686,6 +686,17 @@ inlinePreview.show.label=Mostrar vista previa en línea
 # for hiding the inline preview block
 inlinePreview.hide.label=Ocultar vista previa en línea
 
+# LOCALIZATION NOTE (settings.button.label): Label for Settings button
+settings.button.label=Ajustes del depurador
+
+# LOCALIZATION NOTE (settings.disableJavaScript.label): Context menu item
+# label for disabling JavaScript
+settings.disableJavaScript.label=Desactivar JavaScript
+
+# LOCALIZATION NOTE (settings.disableJavaScript.tooltip): Context menu item
+# tooltip for disabling JavaScript
+settings.disableJavaScript.tooltip=Desactivar JavaScript (requiere refrescar)
+
 # LOCALIZATION NOTE (preview.noProperties): Label shown in the preview
 # popup when there are no properties to show.
 preview.noProperties=Sin propiedades
