Pontoon: Update Spanish (Argentina) (es-AR) localization of SeaMonkey Co-authored-by: Gabriela <gmontagu@gmail.com>

--- a/es-AR/suite/chrome/mailnews/messenger.properties
+++ b/es-AR/suite/chrome/mailnews/messenger.properties
@@ -372,6 +372,8 @@ newMailAlert_message=#1 recibió #2 nuevo mensaje;#1 recibió #2 nuevos mensajes
 
 # For the Quota tab in the mail folder properties dialog
 quotaUsedFree=%S de %S KB usados
+
+# For the Quota tab in the mail folder properties dialog
 quotaPercentUsed=%S%% lleno
 
 # for message views
@@ -477,6 +479,9 @@ mailServerLoginFailedTitleWithAccount=Ingreso fallido a la cuenta "%S"
 mailServerLoginFailed2=Ingreso fallido al servidor %1$S con nombre de usuario %2$S.
 mailServerLoginFailedRetryButton=&Reintentar
 mailServerLoginFailedEnterNewPasswordButton=Ingr&ese nueva contraseña
+
+confirmMarkAllFoldersReadTitle=Marcar todas las carpetas como leídas
+confirmMarkAllFoldersReadMessage=¿Está seguro de que quiere marcar todos los mensajes en todas las carpetas de esta cuenta como leídos?
 
 # LOCALIZATION NOTE (junkBarMessage): %S is the brandname
 junkBarMessage=%S se refiere a este mensaje como basura.
