Pontoon: Update Norwegian Bokmål (nb-NO) localization of SeaMonkey Co-authored-by: Håvar Henriksen <havar@firefox.no>

--- a/nb-NO/suite/chrome/mailnews/messenger.properties
+++ b/nb-NO/suite/chrome/mailnews/messenger.properties
@@ -372,6 +372,8 @@ newMailAlert_message=#1 mottok #2 ny melding;#1 mottok #2 nye meldinger
 
 # For the Quota tab in the mail folder properties dialog
 quotaUsedFree=%S av %S KB brukt
+
+# For the Quota tab in the mail folder properties dialog
 quotaPercentUsed=%S %% full
 
 # for message views
@@ -477,6 +479,9 @@ mailServerLoginFailedTitleWithAccount=Innlogging på kontoen «%S» mislyktes
 mailServerLoginFailed2=Innlogging på serveren %1$S med brukernavnet %2$S feilet.
 mailServerLoginFailedRetryButton=&Prøv igjen
 mailServerLoginFailedEnterNewPasswordButton=&Skriv nytt passord
+
+confirmMarkAllFoldersReadTitle=Merk alle mapper som lest
+confirmMarkAllFoldersReadMessage=Er du sikker på at du vil markere alle meldinger i alle mapper for denne konto som lest?
 
 # LOCALIZATION NOTE (junkBarMessage): %S is the brandname
 junkBarMessage=%S tror denne meldingen er uønsket.
