--- a/oc/devtools/client/debugger.properties
+++ b/oc/devtools/client/debugger.properties
@@ -686,6 +686,17 @@ inlinePreview.show.label=Afichar l’apercebut en linha
 # for hiding the inline preview block
 inlinePreview.hide.label=Amagar l’apercebut en linha
 
+# LOCALIZATION NOTE (settings.button.label): Label for Settings button
+settings.button.label=Paramètres de desbugatge
+
+# LOCALIZATION NOTE (settings.disableJavaScript.label): Context menu item
+# label for disabling JavaScript
+settings.disableJavaScript.label=Desactivar JavaScript
+
+# LOCALIZATION NOTE (settings.disableJavaScript.tooltip): Context menu item
+# tooltip for disabling JavaScript
+settings.disableJavaScript.tooltip=Desactivar JavaScript (Requerís un recargament)
+
 # LOCALIZATION NOTE (preview.noProperties): Label shown in the preview
 # popup when there are no properties to show.
 preview.noProperties=Cap de proprietat
