--- a/it/devtools/client/netmonitor.properties
+++ b/it/devtools/client/netmonitor.properties
@@ -250,6 +250,7 @@ netmonitor.toolbar.resizeColumnToFitContent = Adatta larghezza colonna al conten
 netmonitor.toolbar.resizeColumnToFitContent.title = Doppio clic per adattare la colonna al contenuto
 netmonitor.toolbar.timings = Tempi
 netmonitor.toolbar.responseHeaders = Header risposta
+netmonitor.headers.toolbar.block = Blocca
 netmonitor.summary.url = URL richiesta:
 netmonitor.summary.method = Metodo di richiesta:
 netmonitor.summary.address = Indirizzo remoto:
