[S] devtools: Bug 1631302 - Quick UX refactor of the header sections

--- a/it/devtools/client/netmonitor.properties
+++ b/it/devtools/client/netmonitor.properties
@@ -260,6 +260,7 @@ netmonitor.summary.learnMore = Ulteriori informazioni sui codici di stato
 netmonitor.summary.referrerPolicy = Referrer Policy:
 netmonitor.summary.editAndResend = Modifica e reinvia
 netmonitor.summary.rawHeaders = Header non elaborati (raw)
+netmonitor.headers.raw = Non elaborati (raw)
 netmonitor.summary.rawHeaders.requestHeaders = Header richiesta:
 netmonitor.summary.rawHeaders.responseHeaders = Header risposta:
 netmonitor.summary.size = Dimensioni header:
