--- a/fr/browser/installer/nsisstrings.properties
+++ b/fr/browser/installer/nsisstrings.properties
@@ -37,6 +37,8 @@ STUB_INSTALLING_LABEL2=Installation…
 # number of lines available.
 STUB_INSTALLING_HEADLINE=Donnez la priorité à votre vie privée.\nRejoignez $BrandProductName.
 STUB_INSTALLING_BODY=Installez nos autres logiciels respectueux de la vie privée et apprenez à naviguer intelligemment et en sécurité.
+STUB_INSTALLING_HEADLINE2=Optimisation de vos paramètres pour la vitesse, la confidentialité et la sécurité.
+STUB_INSTALLING_BODY2=$BrandShortName sera prêt dans quelques instants.
 STUB_BLURB_FIRST1=La version la plus rapide et la plus réactive de $BrandShortName jamais conçue
 STUB_BLURB_SECOND1=Le chargement des pages et la navigation entre les onglets sont plus rapides
 STUB_BLURB_THIRD1=Navigation privée renforcée
