--- a/fr/devtools/client/debugger.properties
+++ b/fr/devtools/client/debugger.properties
@@ -686,6 +686,17 @@ inlinePreview.show.label=Afficher l’aperçu en ligne
 # for hiding the inline preview block
 inlinePreview.hide.label=Masquer l’aperçu en ligne
 
+# LOCALIZATION NOTE (settings.button.label): Label for Settings button
+settings.button.label=Paramètres du débogueur
+
+# LOCALIZATION NOTE (settings.disableJavaScript.label): Context menu item
+# label for disabling JavaScript
+settings.disableJavaScript.label=Désactiver JavaScript
+
+# LOCALIZATION NOTE (settings.disableJavaScript.tooltip): Context menu item
+# tooltip for disabling JavaScript
+settings.disableJavaScript.tooltip=Désactive JavaScript (nécessite un redémarrage)
+
 # LOCALIZATION NOTE (preview.noProperties): Label shown in the preview
 # popup when there are no properties to show.
 preview.noProperties=Aucune propriété
