Pontoon: Update Norwegian Nynorsk (nn-NO) localization of Firefox Co-authored-by: Björn I. <bjorni.svindseth@yahoo.com>

--- a/nn-NO/toolkit/chrome/global/aboutReader.properties
+++ b/nn-NO/toolkit/chrome/global/aboutReader.properties
@@ -6,7 +6,7 @@
 # Use the unicode ellipsis char, \u2026,
 # or use "..." if \u2026 doesn't suit traditions in your locale.
 aboutReader.loading2=Lastar …
-aboutReader.loadError=Klarte ikkje å lasta inn artikkelen frå sida
+aboutReader.loadError=Klarte ikkje å laste inn artikkelen frå sida
 
 aboutReader.colorScheme.light=Lys
 aboutReader.colorScheme.dark=Mørk
