Pontoon: Update Occitan (oc) localization of Firefox Co-authored-by: Quentí <quentinantonin@free.fr>

--- a/oc/devtools/client/debugger.properties
+++ b/oc/devtools/client/debugger.properties
@@ -130,7 +130,7 @@ stepOverTooltip=Sautar %S
 
 # LOCALIZATION NOTE (stepInTooltip): The label that is displayed on the
 # button that steps into a function call.
-stepInTooltip=Dintrar dins %S
+stepInTooltip=Dintrar dedins %S
 
 # LOCALIZATION NOTE (stepOutTooltip): The label that is displayed on the
 # button that steps out of a function call.
