Pontoon: Update Slovenian (sl) localization of Firefox Co-authored-by: Rok Žerdin <zerdo90@gmail.com>

--- a/sl/devtools/client/netmonitor.properties
+++ b/sl/devtools/client/netmonitor.properties
@@ -920,6 +920,7 @@ netmonitor.tab.params=Parametri
 
 # LOCALIZATION NOTE (netmonitor.tab.request): This is the label displayed
 # in the network details pane identifying the request tab.
+netmonitor.tab.request=Zahteva
 
 # LOCALIZATION NOTE (netmonitor.tab.response): This is the label displayed
 # in the network details pane identifying the response tab.
@@ -1548,6 +1549,7 @@ netmonitor.cache.device=Naprava
 
 # LOCALIZATION NOTE (netmonitor.settings.menuTooltip): This is the tooltip that gets displayed
 # when the settings menu button is hovered.
+netmonitor.settings.menuTooltip=Nastavitve omrežja
 
 # LOCALIZATION NOTE (netmonitor.settings.importHarTooltip): This is the tooltip that gets displayed
 # when the HAR import menu item is hovered
