--- a/sl/devtools/client/debugger.properties
+++ b/sl/devtools/client/debugger.properties
@@ -686,6 +686,15 @@ inlinePreview.show.label=Prikaži predogled v vrstici
 # for hiding the inline preview block
 inlinePreview.hide.label=Skrij predogled v vrstici
 
+# LOCALIZATION NOTE (settings.button.label): Label for Settings button
+
+# LOCALIZATION NOTE (settings.disableJavaScript.label): Context menu item
+# label for disabling JavaScript
+settings.disableJavaScript.label=Onemogoči JavaScript
+
+# LOCALIZATION NOTE (settings.disableJavaScript.tooltip): Context menu item
+# tooltip for disabling JavaScript
+
 # LOCALIZATION NOTE (preview.noProperties): Label shown in the preview
 # popup when there are no properties to show.
 preview.noProperties=Brez lastnosti
